Fix vertical alignment of dropdown text

--- a/assets/linker/styles/main.css
+++ b/assets/linker/styles/main.css
@@ -78,7 +78,6 @@ input {
   border: none 0px;
   margin: 4px 0px 4px;
   height: 18px;
-  line-height: 25px;
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
   font-size: 11px;
